<resources>
    <string name="app_name">Temperature</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="noAccount">No account? Click to create new!</string>
    <string name="loginToApp">Login to sensor controller app</string>
    <string name="registerToApp">Register new account in sensor controller app</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="passwordsDoesNotMatch">Passwords do not match</string>
    <string name="fillAllData">Fill all data</string>
    <string name="nowLogin">Now login with username and password</string>
    <string name="loggedSuccessfully">Logged successfully</string>
    <string name="sessionExpired">Session expired</string>
    <string name="loggingOut">Logging out</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="welcome">Welcome</string>
    <string name="timeline">Timeline</string>
    <string name="value">Value</string>
    <string name="values">Values</string>
    <string name="noMeasurements">This station does not have any measurements</string>
    <string name="addStation">Add station</string>
    <string name="addMeasurementType">Add measurement type</string>
    <string name="addGateway">Add gateway</string>
    <string name="enterName">Enter name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gatewayAdded">gatewayAdded</string>
    <string name="measurementTypeAdded">Measurement type added</string>
    <string name="stationAdded">Station added</string>
    <string name="firstAddGateway">First add gateway</string>
    <string name="selectGateway">Select gateway</string>
    <string name="selectStation">Select station</string>
    <string name="getStationSecretId">Get station secret id</string>
    <string name="firstSelectStation">First select station</string>
    <string name="secretIdCopied">Secret id copied to clipboard</string>
    <string name="lastMeasurement">Last measurement</string>
    <string name="average">Average</string>
    <string name="firstMeasurement">First measurement</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="current">Current</string>
</resources>
