<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".credentials.register.RegisterActivityImpl">

    <include layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideCenter"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginLeft"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginRight"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginTextView"
            android:layout_marginBottom="10dp"
            style="@style/TextView"
            android:textColor="@color/colorPrimary"
            android:text="@string/loginToApp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:maxLines="3"
            app:layout_constraintBottom_toTopOf="@id/usernameEditText"
            app:layout_constraintStart_toStartOf="@id/marginLeft"
            app:layout_constraintEnd_toEndOf="@id/marginRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameEditText"
            android:hint="@string/username"
            style="@style/EditText"
            app:layout_constraintStart_toStartOf="@id/marginLeft"
            app:layout_constraintEnd_toEndOf="@id/marginRight"
            app:layout_constraintBottom_toTopOf="@id/guideCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            style="@style/EditText"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/marginLeft"
            app:layout_constraintEnd_toEndOf="@id/marginRight"
            app:layout_constraintTop_toBottomOf="@id/guideCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_marginTop="5dp"
            style="@style/Button"
            android:textColor="@color/colorPrimary"
            android:text="@string/login"
            android:onClick="onClick"
            android:textAlignment="center"
            android:textSize="28sp"
            android:padding="2dp"
            android:background="@drawable/button_border"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="@id/marginLeft"
            app:layout_constraintEnd_toEndOf="@id/marginRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noAccountButton"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:text="@string/noAccount"
            style="@style/Button"
            android:onClick="onClick"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="@id/marginLeft"
            app:layout_constraintEnd_toEndOf="@id/marginRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <include layout="@layout/loading_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>